2011-07-19 Tamino Dauth <tamino@cdauth.eu>
* editor: Reading and writing BLP palette for BLP Qt plugin is supported correctly now.

2011-07-17 Tamino Dauth <tamino@cdauth.eu>
* editor: Fixed module actions and focus behaviour.

2011-07-14 Tamino Dauth <tamino@cdauth.eu>
* editor: Fixed MPQ archive dependency for protocol plugin.
* app: Made build directory to include directory for editor related applications.
* blp: Improved and fixed read functionality.

2011-07-09 Tamino Dauth <tamino@cdauth.eu>
* editor: OgreMdlx load and save functionalities support MPQ priority lists now.
* editor: Class Resource got pure virtual member functions save, load and reload and is created with a corresponding MPQ priority list now.

2011-07-08 Tamino Dauth <tamino@cdauth.eu>
* editor: Revised various modules (using custom data source, widget parent and window flags now).
* doc: Added file FEATURES which lists all planned newly implemented World Editor features.
* editor: Added class Map.
* editor: Class Editor has current map instance now.
* editor: Added initial trigger display support in class TriggerEditor.
* map: Improved trigger related classes.
* editor: Added class SplashScreen.
* app: Application "editor" uses that splash screen.

2011-07-06 Tamino Dauth <tamino@cdauth.eu>
* editor: Added class UnitMetaData. 
* editor: Modules and object editor tabs rely on MPQ priority lists only now.
* editor: Moved utility functions into newly added file "platform.hpp".
* editor: Class MpqPriorityList got many of Editor's former core functions (e. g. it handles team color and glow textures now) that modules can rely on it without requiring an editor.
* editor: Improved classes ObjectTableWidget and ObjectTableWidgetPair (using resource class MetaData now).

2011-07-04 Tamino Dauth <tamino@cdauth.eu>
* map: Improved class ImportedFiles.
* map: Improved class Info.
* map: Improved class MetaData.
* editor: Added class MetaData which can be used to load meta data from SLK files.
